--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "mini-css-extract-plugin": "^2.8.1",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "json-server": "^1.0.0-alpha.23"
   }
 }
