--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "copy-webpack-plugin": "^12.0.2",
+    "jquery": "^3.7.1",
     "json-server": "^1.0.0-alpha.23"
   }
 }
